--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
+    "dompurify": "^3.0.1",
+    "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.8.0",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "saas": "^1.0.0",
+    "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://letsblogbackend.onrender.com"
 }
